--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "postinstall": "prisma generate"
   },
   "prisma": {
-    "seed": "tsx prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts",
+    "engines": {
+    "queryEngineType": "binary"
+  }
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
