--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint",
-    "seed": "tsx prisma/seed.ts",
-    "postinstall": "prisma generate"
-  },
+  "dev": "next dev",
+  "build": "prisma generate && next build",
+  "start": "next start",
+  "lint": "next lint",
+  "seed": "tsx prisma/seed.ts",
+  "postinstall": "echo 'Skipping Prisma generate during postinstall on Railway'"
+},
   "prisma": {
     "seed": "tsx prisma/seed.ts",
     "engines": {
