Fix prisma config for Railway deployment

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "scripts": {
   "dev": "next dev",
-  "build": "prisma generate && next build",
+  "build": "npx prisma generate && next build",
   "start": "next start",
   "lint": "next lint",
   "seed": "tsx prisma/seed.ts",
-  "postinstall": "echo 'Skipping Prisma generate during postinstall on Railway'"
+  "postinstall": "prisma generate"
 },
   "prisma": {
     "seed": "tsx prisma/seed.ts",
